--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "server": "nodemon"
   },
-
   "dependencies": {
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "knex": "^0.16.3",
+    "knex-cleaner": "^1.1.4",
     "nodemon": "^1.18.10",
     "sqlite3": "^4.0.6"
   }
